[Feat] Finish Vision Communication

--- a/RM2024-Engineer-Renewed/Targets/DM-MC02/DM-MC02.ioc
+++ b/RM2024-Engineer-Renewed/Targets/DM-MC02/DM-MC02.ioc
@@ -221,7 +221,7 @@ Dma.USART1_RX.9.Mode=DMA_NORMAL
 Dma.USART1_RX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.9.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.9.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART1_RX.9.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.9.Priority=DMA_PRIORITY_HIGH
 Dma.USART1_RX.9.RequestNumber=1
 Dma.USART1_RX.9.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.USART1_RX.9.SignalID=NONE
@@ -239,7 +239,7 @@ Dma.USART1_TX.10.Mode=DMA_NORMAL
 Dma.USART1_TX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_TX.10.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.10.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART1_TX.10.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.10.Priority=DMA_PRIORITY_HIGH
 Dma.USART1_TX.10.RequestNumber=1
 Dma.USART1_TX.10.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.USART1_TX.10.SignalID=NONE
@@ -827,6 +827,8 @@ UART5.Mode=MODE_RX
 UART5.Parity=PARITY_EVEN
 UART5.StopBits=UART_STOPBITS_1
 UART5.WordLength=WORDLENGTH_9B
+UART7.BaudRate=921600
+UART7.IPParameters=BaudRate
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART10.IPParameters=VirtualMode
