--- a/RM2024-Engineer-V2/Targets/DM-MC02/DM-MC02.ioc
+++ b/RM2024-Engineer-V2/Targets/DM-MC02/DM-MC02.ioc
@@ -846,6 +846,8 @@ UART5.Mode=MODE_RX
 UART5.Parity=PARITY_EVEN
 UART5.StopBits=UART_STOPBITS_1
 UART5.WordLength=WORDLENGTH_9B
+UART7.BaudRate=921600
+UART7.IPParameters=BaudRate
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART10.IPParameters=VirtualMode
